# taskpriors

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  taskpriors_spec.md
.github/workflows/: ci.yml
examples/: basic_usage.py  imagenette_sampling.ipynb  imagenette_tsne.py
examples/mieb/: 1_evaluate_hf_models.py  2_generate_imagenet_labelings.ipynb  3_run_linear_probes.py  4_evaluate_linear_probes.ipynb  evalkernels.ipynb
examples/timm/: 1_evaluate_timm_models.py  2_generate_imagenet_labelings.ipynb  3_run_linear_probes.py  4_evaluate_linear_probes.ipynb  linear_probe_results_avg.json  linear_probe_results_convnextv2_base_8192.json
src/taskpriors/: __init__.py  core.py  sampler.py
tests/: test_core.py  test_init.py  test_sampler.py
